--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <link rel="stylesheet" href="./style.css" />
   <body>
-    <h2 class="title">Please tap on the card</h2>
+    <h2 class="title">Please tap or press on the card</h2>
     <div class="container">
       <div class="card">
         <div class="outside">
           <div class="front">
-            <p>Happy Birthday</p>
+            <p style="user-select: none;">Happy Birthday</p>
             <div class="cake">
               <div class="top-layer"></div>
               <div class="middle-layer"></div>
